# Qt-AudioProject

./: CMakeLists.txt  README.md  main.cpp
AudioTools/: AudioBufferHelper.hpp  AudioLevel.cpp  AudioLevel.hpp  AudioRecorder.cpp  AudioRecorder.hpp  AudioUI.cpp  AudioUI.hpp  WidgetPairGrid.cpp  WidgetPairGrid.hpp
